fix mobile spacing under nav

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -22,7 +22,7 @@ $radius: 3px;
 $modal-index: 10;
 
 $banner-size: 250px;
-$banner-size-small: 60px;
+$banner-size-small: 68px;
 $banner-size-medium: 174px;
 
 $screen-xs-min: 480px;
